Fix width on mobile view

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -706,8 +706,9 @@ td > code {
   }
 
   .content .wrapper{
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
+    max-width: 100%;
   }
 
   .mobile-search {
